--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@openzeppelin/contracts": "^5.0.1",
     "dotenv": "^16.4.4",
     "hardhat": "^2.20.1"
+  },
+  "dependencies": {
+    "@chainlink/contracts": "^0.8.0"
   }
 }
